--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -53,7 +53,12 @@ body {
 .parallax-wrap {
     display: block;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     height: 700px;
+}
+#parallax-scene .layer {
+    width: 100%;
 }
 .bg-tri {
     position: absolute;
@@ -62,12 +67,9 @@ body {
     z-index: -900;
 }
 .bg-tri-1 {
-    width: 1800px;
-    img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .bg-tri-2 {
     @extend .bg-tri;
@@ -169,7 +171,6 @@ section {
 }
 #intro {
     display: block;
-    width: 1800px;
     .hero-wrap {
         display: block;
         position: relative;
